# gfs

./: CHANGELOG.md  CONTRIBUTORS.md  Cargo.toml  ROADMAP.md
.github/: dependabot.yml
.github/workflows/: main.yml  pr.yml  release.yml  scorecard.yml
crates/adapters/compute-docker/src/: lib.rs
crates/adapters/compute-docker/src/containers/: clickhouse.rs  clone_bootstrap.sql  mysql.rs  postgresql.rs  sqlite.rs
crates/applications/cli/src/: lib.rs
crates/applications/cli/src/commands/: cmd_clone.rs  cmd_compute.rs  cmd_config.rs  cmd_init.rs  cmd_proxy.rs  mod.rs
crates/applications/cli/tests/: e2e_clone_postgres.rs  e2e_clone_robustness.rs
crates/applications/console/: Cargo.toml
crates/applications/console/src/: actions.rs  docker.rs  main.rs  schema.rs  telemetry.rs
crates/applications/console/web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
crates/applications/console/web/src/: App.tsx  DatabaseDetail.tsx  api.ts  data.tsx  index.css  main.tsx
crates/applications/mcp/src/: tools.rs
crates/applications/proxy/: Cargo.toml  Dockerfile  README.md
crates/applications/proxy/src/: cache_stats.rs  config.rs  db.rs  discovery.rs  main.rs  pg.rs  proxy.rs  refresher.rs  stream.rs  telemetry.rs  tls.rs  warmer.rs
crates/applications/proxy/tests/: gfs_sync_contract.rs
crates/applications/website/: install
crates/domain/src/model/: config.rs
crates/domain/src/ports/: compute.rs  database_provider.rs
crates/domain/src/repo_utils/: repo_layout.rs
crates/extensions/gfs/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  benchmark.results.tsv  benchmark.sh  gfs.control  tpch_validate.sh
crates/extensions/gfs/.cargo/: config.toml
crates/extensions/gfs/c-ref/: Makefile  gfs--0.0.1.sql  gfs.c  gfs.control  probe_fdw.sh  probe_fed.sh  probe_fk.sh  probe_idx.sh  run.sh
crates/extensions/gfs/src/: catalog.rs  lib.rs  route.rs  worker.rs
crates/extensions/gfs/src/sql/: schema.sql
docs/rfcs/008-remote-clone/poc-faithful-overlay/: README.md  run.sh
docs/rfcs/008-remote-clone/poc-fdw-join-pushdown/: README.md  run.sh
docs/rfcs/008-remote-clone/poc-join-fk/: README.md  run.sh
docs/rfcs/008-remote-clone/poc-rowcache/: README.md  run.sh
examples/benchmark-explorer/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
examples/benchmark-explorer/scripts/: run.sh
examples/benchmark-explorer/server/: package.json  tsconfig.json
examples/benchmark-explorer/server/src/: db.ts  headless.ts  index.ts
examples/benchmark-explorer/web/: index.html  package.json  tsconfig.json  vite.config.ts
examples/benchmark-explorer/web/src/: App.tsx  api.ts  styles.css
examples/clone-explorer/: .env.example  README.md  docker-compose.yml  package.json
examples/clone-explorer-pro/: .env.example  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
examples/clone-explorer-pro/scripts/: run.sh
examples/clone-explorer-pro/server/: package.json
examples/clone-explorer-pro/server/src/: db.ts  index.ts
examples/clone-explorer-pro/sql/: 00-extensions.sql  01-schema.sql  02-seed.sql
examples/clone-explorer-pro/web/: index.html  package.json
examples/clone-explorer-pro/web/src/: App.tsx  api.ts  main.tsx  styles.css
examples/clone-explorer/scripts/: run.sh
examples/clone-explorer/server/: package.json
examples/clone-explorer/server/src/: db.ts  index.ts
examples/clone-explorer/sql/: 00-extensions.sql  01-schema.sql  02-seed.sql
examples/clone-explorer/web/: index.html  package.json  vite.config.ts
examples/clone-explorer/web/src/: App.tsx  Panel.tsx  api.ts  main.tsx  styles.css
examples/clone-joins-demo/: README.md  run.sh
(+10 files in other folders)
