[package]
name = "gfs"
version = "0.0.1"
edition = "2021"
description = "GFS copy-on-read storage: a PostgreSQL Table Access Method (pgrx) whose missing rows are fetched from the source on read and written through locally"

# Standalone workspace: this cdylib + pgrx panic=unwind profile must not pollute
# the GFS Cargo workspace. The root Cargo.toml excludes this path; here it is its
# own workspace root. Build it with cargo-pgrx, never plain `cargo build` in the
# parent. See c-ref/ for the original C/PGXS implementation this replaced.
[workspace]

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["pg16"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []

[dependencies]
pgrx = "=0.18.0"

[dev-dependencies.pgrx-tests]
version = "=0.18.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
